# Spbstu_AMF

./: README.md  pyproject.toml
src/spbstu_amf/modules/: __init__.py  rbf_pinn.py
