[tool.poetry]
name = "Spbstu_AMF"
version = "2.0"
description = "Research activity"
authors = ["Danil <danil5678444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
click = "^8.1.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
hydra-core = "^1.3.2"
tensorboard = "^2.14.0"
pytest = "^7.4.0"
torch = {version = "*", source = "torch_cpu"}
torchvision = {version = "*", source = "torch_cpu"}
lightning = "^2.0.9"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
